build the recipe create form

--- a/recipee/src/components/RecipeList.css
+++ b/recipee/src/components/RecipeList.css
@@ -33,7 +33,7 @@
  .recipe-list .card div {
    color: #555;
    font-size: 0.7em;
-   margin: b 20px 0;
+   margin: 20px 0;
    line-height: 1.5em;
  }
 
