create theme and mode contexts

--- a/recipee/src/pages/recipe/Recipe.css
+++ b/recipee/src/pages/recipe/Recipe.css
@@ -27,3 +27,14 @@
 .recipe li:last-child::after {
   content: ".";
 }
+
+.method {
+  text-align: left;
+  line-height: 1.5em;
+}
+
+/* dark mode */
+.recipe.dark {
+  background: #555;
+  color: #e4e4e4;
+}
