--- a/recipee/src/components/RecipeList.css
+++ b/recipee/src/components/RecipeList.css
@@ -50,3 +50,14 @@
    margin: 20px auto 0;
  }
 
+ /* dark mode */
+ .recipe-list .card.dark {
+   background-color: #555;
+ }
+
+ .recipe-list .card.dark p,
+ .recipe-list .card.dark h3,
+ .recipe-list .card.dark div {
+   color: #e4e4e4;
+ }
+
