--- a/recipee/src/components/RecipeList.css
+++ b/recipee/src/components/RecipeList.css
@@ -16,6 +16,14 @@
    position: relative;
  }
 
+ .delete {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  filter: invert(60%);
+ }
+
  .recipe-list .card:hover {
    transform: rotate(3deg);
  }
